--- a/PRATICA/MODELO/PROGRAMA/Estilo.css
+++ b/PRATICA/MODELO/PROGRAMA/Estilo.css
@@ -1,6 +1,7 @@
 body{
     background-color: lightgray;
     text-align: center;
+    
 }
 
 .Texto{
@@ -23,17 +24,31 @@ body{
     height: 70vh;    
 }
 
-table{
+table {
+    border: red;
     display: flex;
     justify-content: center;
-    border-color: red;
-    border: red;
-    border-style: dashed;
+    text-align: center;
+    font-family: Arial, sans-serif;
+}
+th, td {
+    border: 2px solid red;
+    padding: 10px;
+}
+th {
+    background-color: #ddd;
+    font-weight: bold;
+}
+.table-container {
+    display: inline-block;
+    border:dashed red;
+   
 }
 
-th, td{
+.vermelho{
     color: red;
 }
+
 
 .container {
     text-align: center;
@@ -90,4 +105,10 @@ a{
     justify-content: space-between;
     border: 3px solid; 
     border-color: blue;
+}
+
+.top{
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(140, 203, 224);
 }
