--- a/PRATICA/MODELO/PROGRAMA/Estilo.css
+++ b/PRATICA/MODELO/PROGRAMA/Estilo.css
@@ -5,12 +5,15 @@ body{
 }
 
 .Texto{
+    display: flex;
+    flex-wrap: wrap;
     color: indigo;
 }
 
 #Livros {
     display: flex;
     justify-content: center; 
+    flex-wrap: wrap;
     align-items: center; 
     gap: 50px; 
     height: 70vh; 
@@ -19,6 +22,7 @@ body{
 #iframes{
     display: flex;
     justify-content: center; 
+    flex-wrap: wrap;
     align-items: center; 
     gap: 50px; 
     height: 70vh;    
@@ -87,6 +91,7 @@ a{
 }
 
 .IMGtop {
+    display: flex;
     justify-content: space-between;
 }
 
@@ -111,4 +116,10 @@ a{
     display: flex;
     justify-content: space-around;
     background-color: rgb(140, 203, 224);
+}
+
+.ajuste{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
