--- a/PRATICA/SERVIDOR/VIEWS/Resposta.ejs
+++ b/PRATICA/SERVIDOR/VIEWS/Resposta.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Resposta para o Usuário</title>
@@ -14,4 +14,18 @@
         <p>Email: <%= login %></p>
 
     </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Status do Login</title>
+  <link rel="stylesheet" href="/style.css">
+</head>
+<body>
+  <h1>Status do Login</h1>
+  <p>Usuário: <%= usuario %></p>
+  <p>Status: <%= status %></p>
+</body>
 </html>
