--- a/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/style.css
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f0f0f0;
+    background-color: rgba(0, 247, 255, 0.541);
     text-align: center;
     font-family: Arial, sans-serif;
   }
