--- a/PRATICA/SERVIDOR/VIEWS/resposta_usuario.ejs
+++ b/PRATICA/SERVIDOR/VIEWS/resposta_usuario.ejs
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Resposta para o Usuário</title>
-        <meta charset="UTF-8">
+        <title>Resposta para usuário</title>
+        <meta charset="utf-8">
         <link href="estilo.css" rel="stylesheet">
     </head>
-
     <body>
+        
         <h1>Resposta:</h1>
-        <p>Mensagem do Servidor: <%= mensagem %></p>
-
-        <p>Usuário: <%= usuario %></p>
-        <p>Email: <%= login %></p>
+        <p>Mensagem do servidor:  <%= mensagem %> </p>
 
     </body>
 </html>
