--- a/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/style.css
+++ b/PRATICA/SERVIDOR/PUBLIC/LAB/LAB_8 - GET_POST_TEMPLATE/style.css
@@ -1,11 +1,24 @@
+
+
 body {
-    background-color: rgba(0, 247, 255, 0.541);
-    text-align: center;
-    font-family: Arial, sans-serif;
-  }
-  
-  form {
-    align-items: center;
-    margin-top: 20px;
-  }
-  
+  background-color: rgba(0, 247, 255, 0.541);
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center; 
+  align-items: center;     
+  height: 100vh;           
+  margin: 0;              
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  background: white;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
