--- a/PRATICA/SERVIDOR/PUBLIC/estilo.css
+++ b/PRATICA/SERVIDOR/PUBLIC/estilo.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(255, 209, 82);
+    background-color: aqua;
 }
 
 #container{
@@ -10,6 +10,6 @@ body{
 .item{
     background-color: bisque;
     margin: 10px;
-    padding: auto;
+    padding: 10px;
     display: inline;
 }
