--- a/PRATICA/SERVIDOR/VIEWS/Exemplo_FOR.ejs
+++ b/PRATICA/SERVIDOR/VIEWS/Exemplo_FOR.ejs
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Exemplo EJS</title>
-        <meta charset="UTF-8">
+        <title>Exemplo FOR</title>
+        <meta charset="utf-8">
         <link href="estilo.css" rel="stylesheet">
     </head>
     <body>
-
+        
         <h1>Exemplo FOR</h1>
 
         <div id="container">
-        
-         <% for (var i =1; i <= tamanho;  i++ ) { %>
-            <div class="item">
-                <%= i %>
-            </div>
-         <% } %>
-
+            <% for (var i = 1; i <= tamanho;  i++) { %>
+                <div class="item">
+                    <%= i %>
+                </div>
+            <% } %>
         </div>
+        
     </body>
 </html>
