--- a/PRATICA/PROJETO/style.css
+++ b/PRATICA/PROJETO/style.css
@@ -4,7 +4,7 @@
 :root {
   --bg-color: #111;
   --primary: #00ffcc;
-  --secondary: #ff0099; /* rosa */
+  --secondary: #ff0099;
   --text-color: #f0f0f0;
   --border-color: #00ffcc;
   --nav-bg: #222;
